fixed for python 3 and removed is comparison

--- a/04_jupyter_and_python_intro/python_vars_and_flow_control.ipynb
+++ b/04_jupyter_and_python_intro/python_vars_and_flow_control.ipynb
@@ -301,27 +301,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -522,16 +516,13 @@
    "source": [
     "Some other handy functions with lists:\n",
     "* max\n",
-    "* min\n",
-    "* cmp"
+    "* min"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -661,18 +652,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -922,27 +909,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -951,6 +932,7 @@
    "metadata": {},
    "source": [
     "<hr>\n",
+    "\n",
     "## Flow control\n",
     "\n",
     "<img src=\"https://docs.oracle.com/cd/B19306_01/appdev.102/b14261/lnpls008.gif\">Flow control figure</img>\n",
@@ -1016,21 +998,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'instructors' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-f4d2eec3ec72>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0;34m'Bernease'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0minstructors\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Congratulations!  Bernease is teaching, your class won't stink!\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'instructors' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if 'Bernease' in instructors:\n",
     "    print(\"Congratulations!  Bernease is teaching, your class won't stink!\")\n",
@@ -1079,9 +1049,9 @@
    "source": [
     "my_favorite = 'pie'\n",
     "\n",
-    "if my_favorite is 'cake':\n",
+    "if my_favorite == 'cake':\n",
     "    print(\"He likes cake!  I'll start making a double chocolate velvet cake right now!\")\n",
-    "elif my_favorite is 'pie':\n",
+    "elif my_favorite == 'pie':\n",
     "    print(\"He likes pie!  I'll start making a cherry pie right now!\")\n",
     "else:\n",
     "    print(\"He likes \" + my_favorite + \".  I don't know how to make that.\")"
@@ -1102,7 +1072,7 @@
    "source": [
     "my_favorite = 'pie'\n",
     "\n",
-    "if my_favorite is 'cake' or my_favorite is 'pie':\n",
+    "if my_favorite == 'cake' or my_favorite == 'pie':\n",
     "    print(my_favorite + \" : I have a recipe for that!\")\n",
     "else:\n",
     "    print(\"Ew!  Who eats that?\")"
@@ -1390,7 +1360,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_string = \"DIRECT\"\n",
+    "my_string = \"SEDS\"\n",
     "for c in my_string:\n",
     "    print(c)"
    ]
@@ -1430,9 +1400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def print_string(str):\n",
@@ -1472,9 +1440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -1502,19 +1468,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "list before the function:  [1, 2, 3]\n",
-      "list inside the function:  [1, 2, 3, 'four']\n",
-      "list after the function:  [1, 2, 3, 'four']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def change_list(my_list):\n",
     "   \"\"\"This changes a passed list into this function\"\"\"\n",
@@ -1557,9 +1513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -1581,9 +1535,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -1603,9 +1555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def print_name(first, last='the Clown'):\n",
@@ -1623,27 +1573,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -1678,7 +1622,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print_name_age(age=44, last='Beck', first='Dave')"
+    "print_name_age(age=45, last='Beck', first='Dave')"
    ]
   }
  ],
@@ -1698,7 +1642,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
