finished updated these notebooks for 2021

--- a/07_debug_exceptions_testing/Debugging.ipynb
+++ b/07_debug_exceptions_testing/Debugging.ipynb
@@ -364,6 +364,8 @@
     "    check1 = []\n",
     "    for ele in p:\n",
     "        check1.append((ele <= 1) and (ele >= 0))\n",
+    "    else:\n",
+    "        pass\n",
     "    # verify the sum of the probabilities is 1\n",
     "    # note, the use of np.isclose is correct but the following \n",
     "    # may not return the expected result\n",
@@ -549,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,6 +560,8 @@
     "    items = p * np.log2(p)\n",
     "    if [np.isnan(el) for el in items]:\n",
     "        print(items)\n",
+    "    else:\n",
+    "        pass\n",
     "    return -np.sum(items)"
    ]
   },
@@ -602,6 +606,8 @@
     "        item = val * np.log2(val)\n",
     "        if np.isnan(item):\n",
     "            print(\"%f makes a nan\" % val)\n",
+    "        else:\n",
+    "            pass\n",
     "        items.append(item)\n",
     "    #items = p * np.log(ps)\n",
     "    return -np.sum(items)"
