--- a/07_debug_exceptions_testing/Exceptions.ipynb
+++ b/07_debug_exceptions_testing/Exceptions.ipynb
@@ -194,14 +194,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "def validateDF(df):\n",
     "    if not \"hours\" in df.columns:\n",
-    "        raise ValueError(\"DataFrame should have a column named 'hours'.\")"
+    "        raise ValueError(\"DataFrame should have a column named 'hours'.\")\n",
+    "    else:\n",
+    "        pass"
    ]
   },
   {
