updated instructor names

--- a/04_jupyter_and_python_intro/python_vars_and_flow_control.ipynb
+++ b/04_jupyter_and_python_intro/python_vars_and_flow_control.ipynb
@@ -948,7 +948,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "instructors = ['Dave', 'Bernease', 'Dorkus the Clown']\n",
+    "instructors = ['Dave', 'Erin', 'Murf the Clown']\n",
     "instructors"
    ]
   },
@@ -966,7 +966,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if 'Dorkus the Clown' in instructors:\n",
+    "if 'Murf the Clown' in instructors:\n",
     "    print('#fakeinstructor')"
    ]
   },
@@ -983,7 +983,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if 'Dorkus the Clown' in instructors:\n",
+    "if 'Murf the Clown' in instructors:\n",
     "    print('There are fake names for class instructors in your list!')\n",
     "else:\n",
     "    print(\"Nothing to see here\")"
@@ -1002,8 +1002,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if 'Bernease' in instructors:\n",
-    "    print(\"Congratulations!  Bernease is teaching, your class won't stink!\")\n",
+    "if 'Erin' in instructors:\n",
+    "    print(\"Congratulations!  Erin is teaching, your class won't stink!\")\n",
     "else:\n",
     "    pass"
    ]
@@ -1628,7 +1628,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1642,7 +1642,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
