--- a/04_jupyter_and_python_intro/python_vars_and_flow_control.ipynb
+++ b/04_jupyter_and_python_intro/python_vars_and_flow_control.ipynb
@@ -948,7 +948,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "instructors = ['Dave', 'Erin', 'Murf the Clown']\n",
+    "instructors = ['Bryna', 'Nels', 'Natalie', 'Dave the Clown']\n",
     "instructors"
    ]
   },
@@ -966,7 +966,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if 'Murf the Clown' in instructors:\n",
+    "if 'Dave the Clown' in instructors:\n",
     "    print('#fakeinstructor')"
    ]
   },
@@ -983,7 +983,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if 'Murf the Clown' in instructors:\n",
+    "if 'Dave the Clown' in instructors:\n",
     "    print('There are fake names for class instructors in your list!')\n",
     "else:\n",
     "    print(\"Nothing to see here\")"
@@ -1002,8 +1002,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if 'Erin' in instructors:\n",
-    "    print(\"Congratulations!  Erin is teaching, your class won't stink!\")\n",
+    "if 'Bryna' in instructors:\n",
+    "    print(\"Congratulations!  Bryna is teaching, your class will be fun!\")\n",
     "else:\n",
     "    pass"
    ]
@@ -1611,7 +1611,7 @@
     "def print_name_age(first, last, age):\n",
     "    print_name(first, last)\n",
     "    print('Your age is %d' % (age))\n",
-    "    if age > 35:\n",
+    "    if age > 55:\n",
     "        print('You are really old.')\n",
     "    return"
    ]
@@ -1622,7 +1622,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print_name_age(age=45, last='Beck', first='Dave')"
+    "print_name_age(age=25, last='Beck', first='Dave')"
    ]
   }
  ],
@@ -1642,9 +1642,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
