--- a/07_debug_exceptions_testing/Unit-tests.ipynb
+++ b/07_debug_exceptions_testing/Unit-tests.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Note: you will need to have the `pytest` package installed.  You can do this with `conda install pytest` on the command line before using this notebook.\n",
+    "\n",
+    "If you don't have this package installed, you may get an error like:<br>\n",
+    "`ModuleNotFoundError: No module named 'pytest'`\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -68,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +113,7 @@
        "[False, False]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +144,7 @@
        "1.0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +174,7 @@
        "2.0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +201,7 @@
        "0.0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -301,8 +311,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[32], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mentropy\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m.9\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m.9\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[25], line 8\u001b[0m, in \u001b[0;36mentropy\u001b[0;34m(ps)\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m np\u001b[38;5;241m.\u001b[39misclose(\u001b[38;5;241m1\u001b[39m, np\u001b[38;5;241m.\u001b[39msum(ps), atol\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1e-08\u001b[39m):\n\u001b[0;32m----> 8\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe list of input probabilities does not sum to 1\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28;01mpass\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m entropy([\u001b[38;5;241m.9\u001b[39m, \u001b[38;5;241m.9\u001b[39m])\n",
+      "Cell \u001b[0;32mIn[2], line 8\u001b[0m, in \u001b[0;36mentropy\u001b[0;34m(ps)\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m np\u001b[38;5;241m.\u001b[39misclose(\u001b[38;5;241m1\u001b[39m, np\u001b[38;5;241m.\u001b[39msum(ps), atol\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1e-08\u001b[39m):\n\u001b[0;32m----> 8\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe list of input probabilities does not sum to 1\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28;01mpass\u001b[39;00m\n",
       "\u001b[0;31mValueError\u001b[0m: The list of input probabilities does not sum to 1"
      ]
     }
@@ -320,22 +330,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "At least one input is out of range [0...1]",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[33], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mentropy\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m0.5\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[25], line 4\u001b[0m, in \u001b[0;36mentropy\u001b[0;34m(ps)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mentropy\u001b[39m(ps):\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28many\u001b[39m([(p \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0.0\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (p \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1.0\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m p \u001b[38;5;129;01min\u001b[39;00m ps]):\n\u001b[0;32m----> 4\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAt least one input is out of range [0...1]\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m      6\u001b[0m         \u001b[38;5;28;01mpass\u001b[39;00m\n",
-      "\u001b[0;31mValueError\u001b[0m: At least one input is out of range [0...1]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "entropy([-0.5])"
    ]
@@ -351,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -508,18 +505,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.041695</td>\n",
-       "      <td>0.205093</td>\n",
+       "      <td>0.450384</td>\n",
+       "      <td>0.208730</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.561708</td>\n",
-       "      <td>0.776799</td>\n",
+       "      <td>0.446973</td>\n",
+       "      <td>0.595051</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.396597</td>\n",
-       "      <td>0.018107</td>\n",
+       "      <td>0.102643</td>\n",
+       "      <td>0.196219</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -527,12 +524,12 @@
       ],
       "text/plain": [
        "          a         b\n",
-       "0  0.041695  0.205093\n",
-       "1  0.561708  0.776799\n",
-       "2  0.396597  0.018107"
+       "0  0.450384  0.208730\n",
+       "1  0.446973  0.595051\n",
+       "2  0.102643  0.196219"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +549,7 @@
        "True"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,8 +599,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Code for homework or your work should use test files.** In this lesson, we'll show how to write test codes in a Jupyter notebook. This is done for pedidogical reasons. \n",
+    "\n",
+    "It is **NOT** not something you should do in practice, except as an intermediate exploratory approach. The suggested way to import ipytest is\n",
+    "```\n",
+    "import ipytest\n",
+    "ipytest.autoconfig()\n",
+    "```\n",
+    "\n",
+    "So that is what we'll do along with `pytest` and `numpy`."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,27 +627,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[31mF\u001b[0m\u001b[31m                                                                                          [100%]\u001b[0m\n",
-      "============================================= FAILURES =============================================\n",
-      "\u001b[31m\u001b[1m___________________________________________ test_failure ___________________________________________\u001b[0m\n",
-      "\n",
-      "    \u001b[94mdef\u001b[39;49;00m \u001b[92mtest_failure\u001b[39;49;00m():\u001b[90m\u001b[39;49;00m\n",
-      ">       \u001b[94massert\u001b[39;49;00m \u001b[94m1\u001b[39;49;00m ==\u001b[94m2\u001b[39;49;00m\u001b[90m\u001b[39;49;00m\n",
-      "\u001b[1m\u001b[31mE       assert 1 == 2\u001b[0m\n",
-      "\n",
-      "\u001b[1m\u001b[31m/var/folders/x0/30gk1h9n3fqfnt97pwz4bw380000gn/T/ipykernel_23627/1613237084.py\u001b[0m:10: AssertionError\n",
-      "\u001b[36m\u001b[1m===================================== short test summary info ======================================\u001b[0m\n",
-      "\u001b[31mFAILED\u001b[0m t_2cf8ebce99214601997bab7000bcce29.py::\u001b[1mtest_failure\u001b[0m - assert 1 == 2\n",
-      "\u001b[31m\u001b[31m\u001b[1m1 failed\u001b[0m, \u001b[32m2 passed\u001b[0m\u001b[31m in 0.74s\u001b[0m\u001b[0m\n"
+      "UsageError: Cell magic `%%ipytest` not found.\n"
      ]
     }
    ],
@@ -687,23 +688,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "Not implemented.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[17], line 17\u001b[0m\n\u001b[1;32m     14\u001b[0m     test(\u001b[38;5;241m20\u001b[39m)\n\u001b[1;32m     15\u001b[0m     test(\u001b[38;5;241m200\u001b[39m)\n\u001b[0;32m---> 17\u001b[0m \u001b[43mtest_equal_probability\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[17], line 13\u001b[0m, in \u001b[0;36mtest_equal_probability\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNot implemented.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m#\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m \u001b[43mtest\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     14\u001b[0m test(\u001b[38;5;241m20\u001b[39m)\n\u001b[1;32m     15\u001b[0m test(\u001b[38;5;241m200\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[17], line 11\u001b[0m, in \u001b[0;36mtest_equal_probability.<locals>.test\u001b[0;34m(count)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mtest\u001b[39m(count):\n\u001b[1;32m      6\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;124;03m    Invokes the entropy function for a number of values equal to count\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;124;03m    that have the same probability.\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;124;03m    :param int count:\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNot implemented.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: Not implemented."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Implementating a pattern test. Use functions in the test.\n",
     "import pytest\n",
@@ -746,18 +733,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m.\u001b[0m\u001b[32m                                                                                            [100%]\u001b[0m\n",
-      "\u001b[32m\u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.01s\u001b[0m\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%ipytest\n",
     "\n",
@@ -782,18 +760,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m.\u001b[0m\u001b[32m                                                                                            [100%]\u001b[0m\n",
-      "\u001b[32m\u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.87s\u001b[0m\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%ipytest\n",
     "\n",
@@ -837,36 +806,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31mF\u001b[0m\u001b[31mF\u001b[0m\u001b[31m                                                                                           [100%]\u001b[0m\n",
-      "============================================= FAILURES =============================================\n",
-      "\u001b[31m\u001b[1m___________________________________________ test_oneshot ___________________________________________\u001b[0m\n",
-      "\n",
-      "    \u001b[94mdef\u001b[39;49;00m \u001b[92mtest_oneshot\u001b[39;49;00m():\u001b[90m\u001b[39;49;00m\n",
-      ">       \u001b[94massert\u001b[39;49;00m geomean([\u001b[94m1\u001b[39;49;00m,\u001b[94m1\u001b[39;49;00m]) == \u001b[94m1\u001b[39;49;00m\u001b[90m\u001b[39;49;00m\n",
-      "\u001b[1m\u001b[31mE       NameError: name 'geomean' is not defined\u001b[0m\n",
-      "\n",
-      "\u001b[1m\u001b[31m/var/folders/x0/30gk1h9n3fqfnt97pwz4bw380000gn/T/ipykernel_23627/481383766.py\u001b[0m:6: NameError\n",
-      "\u001b[31m\u001b[1m__________________________________________ test_oneshot2 ___________________________________________\u001b[0m\n",
-      "\n",
-      "    \u001b[94mdef\u001b[39;49;00m \u001b[92mtest_oneshot2\u001b[39;49;00m():\u001b[90m\u001b[39;49;00m\n",
-      ">       \u001b[94massert\u001b[39;49;00m geomean([\u001b[94m3\u001b[39;49;00m, \u001b[94m3\u001b[39;49;00m, \u001b[94m3\u001b[39;49;00m]) == \u001b[94m3\u001b[39;49;00m\u001b[90m\u001b[39;49;00m\n",
-      "\u001b[1m\u001b[31mE       NameError: name 'geomean' is not defined\u001b[0m\n",
-      "\n",
-      "\u001b[1m\u001b[31m/var/folders/x0/30gk1h9n3fqfnt97pwz4bw380000gn/T/ipykernel_23627/481383766.py\u001b[0m:9: NameError\n",
-      "\u001b[36m\u001b[1m===================================== short test summary info ======================================\u001b[0m\n",
-      "\u001b[31mFAILED\u001b[0m t_2cf8ebce99214601997bab7000bcce29.py::\u001b[1mtest_oneshot\u001b[0m - NameError: name 'geomean' is not defined\n",
-      "\u001b[31mFAILED\u001b[0m t_2cf8ebce99214601997bab7000bcce29.py::\u001b[1mtest_oneshot2\u001b[0m - NameError: name 'geomean' is not defined\n",
-      "\u001b[31m\u001b[31m\u001b[1m2 failed\u001b[0m\u001b[31m in 0.82s\u001b[0m\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%ipytest\n",
     "import pytest\n",
@@ -937,7 +879,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "diff_predictor_env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -951,9 +893,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
