added another missing module

--- a/07_debug_exceptions_testing/Unit-tests.ipynb
+++ b/07_debug_exceptions_testing/Unit-tests.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Note: you will need to have the `pytest` package installed.  You can do this with `conda install pytest` on the command line before using this notebook.\n",
+    "#### Note: you will need to have the `pytest` and `ipytest` packages installed.  You can do this with `conda install pytest ipytest` on the command line before using this notebook.\n",
     "\n",
     "If you don't have this package installed, you may get an error like:<br>\n",
     "`ModuleNotFoundError: No module named 'pytest'`\n"
