Update notebooks for string formatting, single letter variable names
Also cleanup things that shouldn't be in the repo, update the gitignore

--- a/05_pandas_more_git/data_manipulation.ipynb
+++ b/05_pandas_more_git/data_manipulation.ipynb
@@ -86,6 +86,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -950,7 +957,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_mean = df.groupby(['from_station_id']).mean()\n",
+    "df_mean = df.groupby(['from_station_id']).mean(numeric_only=True)\n",
     "df_mean.head()"
    ]
   },
@@ -983,7 +990,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.groupby(gender).mean()"
+    "df.groupby([\"gender\"]).mean(numeric_only=True)"
    ]
   },
   {
@@ -1035,18 +1042,7 @@
     "### Visualizing data with ``pandas``\n",
     "\n",
     "Of course, looking at tables of data is not very intuitive.\n",
-    "Fortunately Pandas has many useful plotting functions built-in, all of which make use of the ``matplotlib`` library to generate plots.\n",
-    "\n",
-    "Whenever you do plotting in the IPython notebook, you will want to first run this *magic command* which configures the notebook to work well with plots:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline"
+    "Fortunately Pandas has many useful plotting functions built-in, all of which make use of the ``matplotlib`` library to generate plots."
    ]
   },
   {
@@ -1281,7 +1277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
