--- a/04_jupyter_and_python_intro/python_vars_and_flow_control.ipynb
+++ b/04_jupyter_and_python_intro/python_vars_and_flow_control.ipynb
@@ -695,9 +695,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_dict = { 'tuple' : 'An immutable collection of ordered objects',\n",
-    "            'list' : 'A mutable collection of ordered objects',\n",
-    "            'dictionary' : 'A mutable collection of objects' }\n",
+    "my_dict = {\n",
+    "    'tuple' : 'An immutable collection of ordered objects',\n",
+    "    'list' : 'A mutable collection of ordered objects',\n",
+    "    'dictionary' : 'A mutable collection of objects'\n",
+    "}\n",
     "my_dict"
    ]
   },
@@ -1261,8 +1263,8 @@
    "outputs": [],
    "source": [
     "sum = 0\n",
-    "for i in range(10):\n",
-    "    sum += i\n",
+    "for index in range(10):\n",
+    "    sum += index\n",
     "print(sum)"
    ]
   },
@@ -1272,7 +1274,7 @@
    "source": [
     "#### For loops can be nested\n",
     "\n",
-    "_Note_: for more on formatting strings, see: [https://pyformat.info](https://pyformat.info)"
+    "_Note_: for more on formatting strings, see: [https://www.w3schools.com/python/python_string_formatting.asp](https://www.w3schools.com/python/python_string_formatting.asp)"
    ]
   },
   {
@@ -1281,9 +1283,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(1, 4):\n",
-    "    for j in range(1, 4):\n",
-    "        print('%d * %d = %d' % (i, j, i*j))  # Note string formatting here, %d means an integer"
+    "for index in range(1, 4):\n",
+    "    for index2 in range(1, 4):\n",
+    "        print(f'{index} * {index2} = {index * index2}')"
    ]
   },
   {
@@ -1299,10 +1301,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(10):\n",
-    "    if i == 4:\n",
+    "for index in range(10):\n",
+    "    if index == 4:\n",
     "        break\n",
-    "i"
+    "index"
    ]
   },
   {
@@ -1319,11 +1321,11 @@
    "outputs": [],
    "source": [
     "sum = 0\n",
-    "for i in range(10):\n",
-    "    if (i == 5):\n",
+    "for index in range(10):\n",
+    "    if (index == 5):\n",
     "        continue\n",
     "    else:\n",
-    "        sum += i\n",
+    "        sum += index\n",
     "print(sum)"
    ]
   },
@@ -1341,10 +1343,10 @@
    "outputs": [],
    "source": [
     "sum = 0\n",
-    "for i in range(10):\n",
-    "    sum += i\n",
+    "for index in range(10):\n",
+    "    sum += index\n",
     "else:\n",
-    "    print('final i = %d, and sum = %d' % (i, sum))"
+    "    print(f'final index = {index}, and sum = {sum}')"
    ]
   },
   {
@@ -1361,8 +1363,8 @@
    "outputs": [],
    "source": [
     "my_string = \"SEDS\"\n",
-    "for c in my_string:\n",
-    "    print(c)"
+    "for char in my_string:\n",
+    "    print(char)"
    ]
   },
   {
@@ -1559,7 +1561,7 @@
    "outputs": [],
    "source": [
     "def print_name(first, last='the Clown'):\n",
-    "    print('Your name is %s %s' % (first, last))\n",
+    "    print(f'Your name is {first} {last}')\n",
     "    return"
    ]
   },
@@ -1610,7 +1612,7 @@
    "source": [
     "def print_name_age(first, last, age):\n",
     "    print_name(first, last)\n",
-    "    print('Your age is %d' % (age))\n",
+    "    print(f'Your age is {age}')\n",
     "    if age > 55:\n",
     "        print('You are really old.')\n",
     "    return"
@@ -1642,7 +1644,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
