--- a/07_debug_exceptions_testing/Debugging.ipynb
+++ b/07_debug_exceptions_testing/Debugging.ipynb
@@ -107,14 +107,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# invalid operation\n",
-    "a = 0\n",
-    "5/a  # Division by zero"
+    "val = 0\n",
+    "5/val  # Division by zero"
    ]
   },
   {
@@ -201,7 +199,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "source": [
     "### Isolation of Bugs\n",
@@ -238,9 +239,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def entropy(p):\n",
+    "def entropy(prob):\n",
     "    items = []\n",
-    "    for p_i in p:\n",
+    "    for p_i in prob:\n",
     "        interm = p_i * np.log2(p_i)\n",
     "        items.append(interm)\n",
     "    return -np.sum(items)"
@@ -320,10 +321,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def entropy(p):\n",
-    "    print(f\"p: {p}\")\n",
+    "def entropy(prob):\n",
+    "    print(f\"prob: {prob}\")\n",
     "    items = []\n",
-    "    for p_i in p:\n",
+    "    for p_i in prob:\n",
     "        print(f\"p_i: {p_i}\")\n",
     "        interm = p_i * np.log2(p_i)\n",
     "        print(f\"interm: {interm}\")\n",
@@ -356,23 +357,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def entropy(p):\n",
+    "def entropy(prob):\n",
     "    \"\"\"\n",
     "     arg p: list of float\n",
     "    \"\"\"\n",
     "    # begin by checking all inputs are between 0 and 1 inclusive\n",
     "    check1 = []\n",
-    "    for ele in p:\n",
+    "    for ele in prob:\n",
     "        check1.append((ele <= 1) and (ele >= 0))\n",
     "    else:\n",
     "        pass\n",
     "    # verify the sum of the probabilities is 1\n",
     "    # note, the use of np.isclose is correct but the following \n",
     "    # may not return the expected result\n",
-    "    # check2 = 1 == np.sum(p)\n",
-    "    check2 = np.isclose(1, np.sum(p), atol=1e-08)\n",
+    "    # check2 = 1 == np.sum(prob)\n",
+    "    check2 = np.isclose(1, np.sum(prob), atol=1e-08)\n",
     "    if all(check1) and check2:\n",
-    "        items = p * np.log2(p)\n",
+    "        items = prob * np.log2(prob)\n",
     "        return -np.sum(items)\n",
     "    else:\n",
     "        return -1"
@@ -466,9 +467,9 @@
     "1. Point out that may need slight refactor on result.\n",
     "\n",
     "    ```python\n",
-    "    def entropy(p):\n",
-    "        print(p)\n",
-    "        items = p * np.log(p)\n",
+    "    def entropy(prob):\n",
+    "        print(prob)\n",
+    "        items = prob * np.log(prob)\n",
     "        print(items)\n",
     "        result = -np.sum(items)\n",
     "        print(result)\n",
@@ -479,12 +480,12 @@
     "1. Add labels so code looks like below.\n",
     "\n",
     "    ```python\n",
-    "    def entropy(p):\n",
-    "        print(\"p=%s\" % p)\n",
-    "        items = p * np.log(p)\n",
-    "        print(\"items=%s\" % items)\n",
+    "    def entropy(prob):\n",
+    "        print(f\"prob={prob}\")\n",
+    "        items = prob * np.log(prob)\n",
+    "        print(f\"items={items}\")\n",
     "        result = -np.sum(items)\n",
-    "        print(\"result=%s\" % result)\n",
+    "        print(f\"result={result}\")\n",
     "        return result\n",
     "    ```"
    ]
@@ -526,9 +527,9 @@
    "outputs": [],
    "source": [
     "# Create a vector of probabilities.\n",
-    "p = np.arange(start=5., stop=-1., step=-0.5)\n",
-    "p /= np.sum(p)\n",
-    "p"
+    "prob = np.arange(start=5., stop=-1., step=-0.5)\n",
+    "prob /= np.sum(prob)\n",
+    "prob"
    ]
   },
   {
@@ -537,7 +538,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "entropy(p)"
+    "entropy(prob)"
    ]
   },
   {
@@ -551,13 +552,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def entropy1(p):\n",
-    "    print(\"p=%s\" % str(p))\n",
-    "    items = p * np.log2(p)\n",
+    "def entropy1(prob):\n",
+    "    print(f\"prob={prob}\")\n",
+    "    items = prob * np.log2(prob)\n",
     "    if [np.isnan(el) for el in items]:\n",
     "        print(items)\n",
     "    else:\n",
@@ -580,7 +581,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "entropy1(p)"
+    "entropy1(prob)"
    ]
   },
   {
@@ -598,11 +599,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def entropy2(p):\n",
-    "    p = np.asarray(p)  # convert p to array if necessary\n",
-    "    print(p)\n",
+    "def entropy2(prob):\n",
+    "    prob = np.asarray(prob)  # convert p to array if necessary\n",
+    "    print(prob)\n",
     "    items = []\n",
-    "    for val in p:\n",
+    "    for val in prob:\n",
     "        item = val * np.log2(val)\n",
     "        if np.isnan(item):\n",
     "            print(\"%f makes a nan\" % val)\n",
@@ -619,7 +620,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "entropy2(p)"
+    "entropy2(prob)"
    ]
   },
   {
@@ -645,8 +646,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def entropy(p):\n",
-    "    items = p * np.log2(p)\n",
+    "def entropy(prob):\n",
+    "    items = prob * np.log2(prob)\n",
     "    import pdb; pdb.set_trace()\n",
     "    return -np.sum(items)"
    ]
@@ -664,8 +665,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = [.1, -.2, .3]\n",
-    "entropy(p)"
+    "prob = [.1, -.2, .3]\n",
+    "entropy(prob)"
    ]
   },
   {
@@ -674,14 +675,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = \"[0.1, 0.3, 0.5, 0.7, 0.9]\"\n",
-    "entropy(p)"
+    "prob = \"[0.1, 0.3, 0.5, 0.7, 0.9]\"\n",
+    "entropy(prob)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -695,9 +703,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
