--- a/07_debug_exceptions_testing/Exceptions.ipynb
+++ b/07_debug_exceptions_testing/Exceptions.ipynb
@@ -61,7 +61,7 @@
    "source": [
     "def divide(numerator, denominator):\n",
     "    result = numerator/denominator\n",
-    "    print(\"result = %f\" % result)"
+    "    print(f\"result = {result}\")"
    ]
   },
   {
@@ -82,7 +82,7 @@
     "def divide1(numerator, denominator):\n",
     "    try:\n",
     "        result = numerator/denominator\n",
-    "        print(\"result = %f\" % result)\n",
+    "        print(f\"result = {result}\")\n",
     "    except:\n",
     "        print(\"You can't divide by 0!\")"
    ]
@@ -137,9 +137,9 @@
     "def divide2(numerator, denominator):\n",
     "    try:\n",
     "        result = numerator / denominator\n",
-    "        print(\"result = %f\" % result)\n",
+    "        print(f\"result = {result}\")\n",
     "    except (ZeroDivisionError, TypeError) as err:\n",
-    "        print(\"Got an exception: %s\" % err)"
+    "        print(f\"Got an exception: {err}\")"
    ]
   },
   {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -253,9 +253,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
