--- a/07_debug_exceptions_testing/Unit-tests.ipynb
+++ b/07_debug_exceptions_testing/Unit-tests.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,21 +78,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Code Under Test\n",
-    "def entropy(ps):\n",
-    "    if any([(p < 0.0) or (p > 1.0) for p in ps]):\n",
+    "def entropy(prob):\n",
+    "    if any([(p_i < 0.0) or (p_i > 1.0) for p_i in prob]):\n",
     "        raise ValueError(\"At least one input is out of range [0...1]\")\n",
     "    else:\n",
     "        pass\n",
-    "    if not np.isclose(1, np.sum(ps), atol=1e-08):\n",
+    "    if not np.isclose(1, np.sum(prob), atol=1e-08):\n",
     "        raise ValueError(\"The list of input probabilities does not sum to 1\")\n",
     "    else:\n",
     "        pass\n",
-    "    items = ps * np.log2(ps)\n",
+    "    items = prob * np.log2(prob)\n",
     "    new_items = []\n",
     "    for item in items:\n",
     "        if np.isnan(item):\n",
@@ -108,9 +108,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ps = [.8, .2]\n",
+    "prob = [.8, .2]\n",
     "#ps = [ 1.00000001, 0]\n",
-    "[(p < 0.0) or (p > 1.0) for p in ps]"
+    "[(p_i < 0.0) or (p_i > 1.0) for p_i in prob]"
    ]
   },
   {
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,14 +319,14 @@
    "outputs": [],
    "source": [
     "# Pattern test\n",
-    "def check_equal_probabilities(n):\n",
-    "    prob = 1.0/n\n",
-    "    ps = np.repeat(prob , n)\n",
+    "def check_equal_probabilities(count):\n",
+    "    prob = 1.0/count\n",
+    "    ps = np.repeat(prob, count)\n",
     "    if np.isclose(entropy(ps), -np.log2(prob)):\n",
-    "        print(f\"Test passed for n = {n}\")\n",
+    "        print(f\"Test passed for count = {count}\")\n",
     "    else:\n",
     "        import pdb; pdb.set_trace()\n",
-    "        print (f\"Test failed for n = {n}\")\n",
+    "        print (f\"Test failed for count = {count}\")\n",
     "        \n",
     "        \n",
     "# Run a test\n",
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,15 +668,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ipytest.run()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +730,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cse583",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
