minor updates to major chart notebook

--- a/01_overview/major_chart.ipynb
+++ b/01_overview/major_chart.ipynb
@@ -79,7 +79,9 @@
    "source": [
     "\n",
     "# cribbed from here: https://matplotlib.org/stable/gallery/pie_and_polar_charts/pie_and_donut_labels.html\n",
-    "# color set selected to not have the start & end color the same\n",
+    "# color_sequences selected to not have the start & end color the same\n",
+    "# startangle selected to avoid overlap of major labels\n",
+    "# figsize also helps with avoiding label overlap\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(10, 10), subplot_kw=dict(aspect=\"equal\"))\n",
     "\n",
@@ -95,8 +97,12 @@
     ")\n",
     "\n",
     "bbox_props = dict(boxstyle=\"square,pad=0.3\", fc=\"w\", ec=\"k\", lw=0.72)\n",
-    "kw = dict(arrowprops=dict(arrowstyle=\"-\"),\n",
-    "          bbox=bbox_props, zorder=0, va=\"center\")\n",
+    "kw = dict(\n",
+    "    arrowprops=dict(arrowstyle=\"-\"),\n",
+    "    bbox=bbox_props,\n",
+    "    zorder=0,\n",
+    "    va=\"center\"\n",
+    ")\n",
     "\n",
     "for i, p in enumerate(wedges):\n",
     "    ang = (p.theta2 - p.theta1)/2. + p.theta1\n",
@@ -105,8 +111,13 @@
     "    horizontalalignment = {-1: \"right\", 1: \"left\"}[int(np.sign(x))]\n",
     "    connectionstyle = f\"angle,angleA=0,angleB={ang}\"\n",
     "    kw[\"arrowprops\"].update({\"connectionstyle\": connectionstyle})\n",
-    "    ax.annotate(majors[i], xy=(x, y), xytext=(1.35*np.sign(x), 1.4*y),\n",
-    "                horizontalalignment=horizontalalignment, **kw)\n",
+    "    ax.annotate(\n",
+    "        majors[i],\n",
+    "        xy=(x, y),\n",
+    "        xytext=(1.35*np.sign(x), 1.4*y),\n",
+    "        horizontalalignment=horizontalalignment,\n",
+    "        **kw\n",
+    "    )\n",
     "\n",
     "# plt.show()\n",
     "plt.savefig(\"major_pie_chart.png\", bbox_inches=\"tight\")\n",
@@ -117,6 +128,17 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1657ce4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"number of students\", major_hist[\"count\"].sum())\n",
+    "print(\"min percent:\", 100/major_hist[\"count\"].sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95709552",
    "metadata": {},
    "outputs": [],
    "source": []
