Update slides for intro class

--- a/01_overview/major_chart.ipynb
+++ b/01_overview/major_chart.ipynb
@@ -42,7 +42,8 @@
     "    \"Health Economics and Outcomes\": \"Health Economics and Outcomes\",\n",
     "    \"Finance & Risk Management\": \"Finance & Risk Management\",\n",
     "    \"Molecular and Cellular Biology\": \"Molecular and Cellular Biology\",\n",
-    "    \"Demographic Methods, Sociology\": \"Sociology & Demography\"\n",
+    "    \"Demographic Methods, Sociology\": \"Sociology & Demography\",\n",
+    "    \"Biomedical and Health Informatics\":\"Biomedical and Health Informatics\"\n",
     "}\n",
     "for key, val in major_replace_dict.items():\n",
     "    majors[majors.str.contains(key)] = val\n",
@@ -91,7 +92,7 @@
     "wedges, texts, pcts = ax.pie(\n",
     "    counts,\n",
     "    wedgeprops=dict(width=0.5),\n",
-    "    startangle=-20,\n",
+    "    startangle=-18,\n",
     "    colors = matplotlib.color_sequences[\"Set3\"],\n",
     "    autopct='%1.1f%%',\n",
     ")\n",
