fix spelling error

--- a/04_jupyter_and_python_intro/python_vars_and_flow_control.ipynb
+++ b/04_jupyter_and_python_intro/python_vars_and_flow_control.ipynb
@@ -741,7 +741,7 @@
    "metadata": {},
    "source": [
     "Notice that ordering is not preserved!\n",
-    "#### As of Python 3.7 the ordering is garunteed to be insertion order but that does not mean alphabetical or otherwise sorted.\n",
+    "#### As of Python 3.7 the ordering is guaranteed to be insertion order but that does not mean alphabetical or otherwise sorted.\n",
     "\n",
     "And we can add new items to the list."
    ]
