remove the `pdb` stuff from the debugging notebook

--- a/07_debug_exceptions_testing/Debugging.ipynb
+++ b/07_debug_exceptions_testing/Debugging.ipynb
@@ -629,54 +629,7 @@
    "source": [
     "### Using Python's debugger, `pdb`\n",
     "\n",
-    "Python comes with a built-in debugger called [pdb](http://docs.python.org/2/library/pdb.html).  It allows you to step line-by-line through a computation and examine what's happening at each step.  Note that this should probably be your last resort in tracing down a bug.  I've probably used it a dozen times or so in five years of coding.  But it can be a useful tool to have in your toolbelt.\n",
-    "\n",
-    "You can use the debugger by inserting the line\n",
-    "``` python\n",
-    "import pdb; pdb.set_trace()\n",
-    "```\n",
-    "within your script. To leave the debugger, type \"exit()\". To see the commands you can use, type \"help\".\n",
-    "\n",
-    "Let's try this out:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def entropy(prob):\n",
-    "    items = prob * np.log2(prob)\n",
-    "    import pdb; pdb.set_trace()\n",
-    "    return -np.sum(items)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This can be a more convenient way to debug programs and step through the actual execution."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prob = [.1, -.2, .3]\n",
-    "entropy(prob)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prob = \"[0.1, 0.3, 0.5, 0.7, 0.9]\"\n",
-    "entropy(prob)"
+    "Python comes with a built-in debugger called [pdb](http://docs.python.org/2/library/pdb.html).  It allows you to step line-by-line through a computation and examine what's happening at each step. We will come back to this later, it's best used outside of a notebook.\n"
    ]
   },
   {
